fixed the overflowing caused by the confetti component

--- a/src/index.css
+++ b/src/index.css
@@ -63,14 +63,15 @@ body{
     cursor: default;
 }
 .quiz--loading-message{
-    position: relative;
-    top: 50vh;
-    left: 50vh;
+    position: absolute;
+    top: 40vh;
+    left: 100vh;
     color: white;
-    font-size: 2rem;
-    font-weight: 500;
+    font-size: 5rem;
 }
 .quiz--score{
+    position: relative;
+    right: 10vh;
     color: #fff;
     font-size: xx-large;
     font-weight: 700;
@@ -87,7 +88,7 @@ body{
     cursor: pointer;
 }
 .start--start-button{
-    position: relative;
+    position: absolute;
     left: 50vh;
     top: 50vh;
     background-color: #fff;
@@ -96,4 +97,21 @@ body{
     width: 100vh;
     padding: 1rem;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
 }
+
+.start--again-button{
+    position: absolute;
+    left: 50vh;
+    top: 55vh;
+    background-color: #fff;
+    color: #71697A;
+    border-radius: 10px;
+    width: 100vh;
+    padding: 1rem;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+}
+
